Closed
Bug 182162
Opened 23 years ago
Closed 23 years ago
[gtk2] random crashing on toplevel focus in/out
Categories
(Core Graveyard :: Embedding: GTK Widget, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: tommi.komulainen, Assigned: blizzard)
References
Details
(Keywords: crash)
Attachments
(1 file, 1 obsolete file)
|
769 bytes,
patch
|
tor
:
review+
shaver
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 Galeon/1.3 (Turing 42;) Gecko
Build Identifier:
Quite randomly the gtkmozembed widget crashes in toplevel focus in/out events.
Reproducible: Sometimes
Steps to Reproduce:
1.Create new gtkmozembed
2.Generate toplevel focus in/out events
3.Repeat from 1) until crashes
Actual Results:
Boom!
Expected Results:
No boom.
| Reporter | ||
Comment 1•23 years ago
|
||
The type of the parameter that is used when connecting the
toplevel_focus_in/out signals is different from the type that the handler tries
to use. That is obviously bad.
| Assignee | ||
Comment 2•23 years ago
|
||
Comment on attachment 107575 [details] [diff] [review]
Use same types for signal_connect and in the signal handler
we can just fix what's passed in
Attachment #107575 -
Flags: review-
| Assignee | ||
Comment 3•23 years ago
|
||
Change the type passed in instead of fixing the functions.
Attachment #107575 -
Attachment is obsolete: true
Comment 4•23 years ago
|
||
Comment on attachment 107620 [details] [diff] [review]
patch
Yeah, so how _did_ that ever work?
Attachment #107620 -
Flags: superreview+
| Assignee | ||
Comment 5•23 years ago
|
||
I swear I remember testing it.
Comment on attachment 107620 [details] [diff] [review]
patch
r=tor
Attachment #107620 -
Flags: review+
| Assignee | ||
Comment 7•23 years ago
|
||
Fixed.
Status: UNCONFIRMED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•13 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•