Bug #182162.  gtk2 embedded moz random crashing on toplevel focus in/out.  Make sure to pass the right object as the callback argument.  r=tor, sr=shaver